--- a/styles/main.css
+++ b/styles/main.css
@@ -149,7 +149,8 @@ body {
 }
 
 .canvas {
-  background: url("../images/filler.png") center
+  /*background: url("../images/filler.png") center*/
+  background: url("http://findmatthew.com/style/../img/filler.png") center
     center/cover;
   height: 100%;
   left: 0;
@@ -2163,7 +2164,8 @@ body {
 }
 
 .canvas {
-  background: url("../images/filler.png") center
+  /*background: url("../images/filler.png") center*/
+  background: url("http://findmatthew.com/style/../img/filler.png") center
     center/cover;
   height: 100%;
   left: 0;
