--- a/styles/main.css
+++ b/styles/main.css
@@ -149,7 +149,6 @@ body {
 }
 
 .canvas {
-  /*background: url("../images/filler.png") center*/
   background: url("http://findmatthew.com/style/../img/filler.png") center
     center/cover;
   height: 100%;
@@ -1241,7 +1240,7 @@ footer .footnote .highlight {
     max-width: 90%;
   }
   section:nth-of-type(2) .bullet-wrap {
-    height: initial;
+    height: intial;
     margin: 0;
     padding: 0 10px;
   }
@@ -2164,7 +2163,6 @@ body {
 }
 
 .canvas {
-  /*background: url("../images/filler.png") center*/
   background: url("http://findmatthew.com/style/../img/filler.png") center
     center/cover;
   height: 100%;
@@ -2736,7 +2734,19 @@ section:nth-of-type(3) #gallery .mix .button:hover {
 }
 section:nth-of-type(3) #gallery .mix:nth-child(1) .card {
   background: url("../images/slides/ordering-1.jpg") center center/cover;
-
+  /* background-image: url("../images/laptop-bg3.png");
+background-repeat: no-repeat;
+background-position: center bottom;
+background-size: cover;  */
+}
+/* section:nth-of-type(3) #gallery .mix:nth-child(2) .card {
+  background: url("http://findmatthew.com/style/../img/thumb-2.jpg") center
+    center/cover;
+} */
+/* section:nth-of-type(3) #gallery .mix:nth-child(3) .card {
+  background: url("http://findmatthew.com/style/../img/thumb-3.jpg") center
+    center/cover;
+} */
 
 section:nth-of-type(3) #gallery .mix .card {
   height: 240px;
@@ -3252,7 +3262,7 @@ footer .footnote .highlight {
     max-width: 90%;
   }
   section:nth-of-type(2) .bullet-wrap {
-    height: initial;
+    height: intial;
     margin: 0;
     padding: 0 10px;
   }
